# ocr

./: .gitignore  LICENSE  README.md  main.py  ocr.py  pyproject.toml
benchmark/: glmocr_config.yaml  predict.py  sample_pages.py
benchmark/configs/: end2end.yaml
docs/superpowers/plans/: 2026-07-09-omnidocbench-eval.md
docs/superpowers/specs/: 2026-07-09-omnidocbench-eval-design.md
tests/: test_predict.py  test_sample_pages.py
