[project]
name = "glm-ocr-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "pillow>=12.3.0",
    "pypdfium2>=5.11.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
